test_scripts/errors/fn_add_int_bool.shm
fn test(a, b) { a + b; }
test(1, true);
